--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <link href="https://cdn.jsdelivr.net/gh/rastikerdar/shabnam-font@v5.0.1/dist/font-face.css" rel="stylesheet"/>
 
 <style>
-/* Reset & Base */
 *{margin:0;padding:0;box-sizing:border-box}
-html,body{background:#0e0e0e;color:#fff;font-family:'Shabnam','Poppins',sans-serif;line-height:1.6;scroll-behavior:smooth}
+html,body{
+  background:#0e0e0e;
+  color:#fff;
+  font-family:'Shabnam','Poppins',sans-serif;
+  line-height:1.6;
+  scroll-behavior:smooth
+}
 a{text-decoration:none;color:inherit}
 
-/* Theme Variables */
 :root{
   --gold:#facc15;
   --gold-gradient:linear-gradient(45deg,#facc15,#ffd700,#f6e05e);
@@ -29,22 +33,38 @@ nav{
   display:flex;justify-content:space-between;align-items:center;
   padding:15px 50px;z-index:10
 }
-nav .logo{font-weight:700;font-size:1.5rem;background:var(--gold-gradient);-webkit-background-clip:text;color:transparent}
+nav .logo{
+  font-weight:700;font-size:1.5rem;
+  background:var(--gold-gradient);
+  -webkit-background-clip:text;color:transparent
+}
 nav ul{display:flex;gap:25px;list-style:none}
 nav ul li a{font-weight:500;transition:.3s}
 nav ul li a:hover{color:var(--gold)}
-.lang-btn{border:1px solid var(--gold);background:none;color:var(--gold);padding:5px 12px;border-radius:20px;cursor:pointer}
+.lang-btn{
+  border:1px solid var(--gold);background:none;color:var(--gold);
+  padding:5px 12px;border-radius:20px;cursor:pointer
+}
 
 /* Hero */
 header.hero{
   position:relative;
-  min-height:100vh;display:flex;align-items:center;padding:0 50px;
+  min-height:100vh;
+  display:flex;align-items:center;
+  padding:0 50px;
   background:var(--gold-gradient);
 }
 header.hero::before{
-  content:"";position:absolute;inset:0;
-  background:var(--bg-dark) url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400'%3E%3Cg fill='%23333' fill-opacity='0.2'%3E%3Ccircle cx='200' cy='200' r='200'/%3E%3C/g%3E%3C/svg%3E") repeat;
-  mix-blend-mode:multiply;
+  content:"";
+  position:absolute;inset:0;
+  background:
+    var(--bg-dark)
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='800'%3E%3Cg stroke='%23facc15' stroke-opacity='0.25' stroke-width='1'%3E%3Cpath d='M0 100 L800 0 L800 1000 L0 900 Z'/%3E%3Cpath d='M0 300 L800 200 L800 1200 L0 1100 Z'/%3E%3Cpath d='M0 500 L800 400 L800 1400 L0 1300 Z'/%3E%3C/g%3E%3C/svg%3E")
+    repeat;
+  background-size:cover;
+  mix-blend-mode:overlay;
+  opacity:0.85;
+  z-index:0;
 }
 .hero-content{position:relative;display:flex;flex-wrap:wrap;align-items:center;gap:50px;width:100%}
 .hero-text{flex:1;min-width:280px}
@@ -59,7 +79,7 @@ header.hero::before{
 .hero-image img{
   max-width:320px;border-radius:20px;
   box-shadow:0 0 40px rgba(250,204,21,0.5);
-  object-fit:cover;mix-blend-mode:screen; /* blend effect */
+  object-fit:cover;mix-blend-mode:screen;
 }
 
 /* Sections */
