--- a/index.html
+++ b/index.html
@@ -1,248 +1,189 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fa" dir="rtl">
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>محمدامین طیبی | رزومه آنلاین</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>محمدامین طیبی — رزومه</title>
 
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
-<link href="https://cdn.jsdelivr.net/gh/rastikerdar/shabnam-font@v5.0.1/dist/font-face.css" rel="stylesheet"/>
+<!-- Fonts: Shabnam (برای فارسی) + Poppins -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/gh/rastikerdar/shabnam-font@v2.0.0/dist/font-face.css" rel="stylesheet">
+
+<meta name="description" content="رزومهٔ محمدامین طیبی — کارشناس فنی پشتیبانی / Network & Communications Specialist">
 
 <style>
-/* Reset & Base */
-*{margin:0;padding:0;box-sizing:border-box}
-html,body{background:#0e0e0e;color:#fff;font-family:'Shabnam','Poppins',sans-serif;line-height:1.6;scroll-behavior:smooth}
-a{text-decoration:none;color:inherit}
-
-/* Theme Variables */
 :root{
-  --gold:#facc15;
-  --gold-gradient:linear-gradient(45deg,#facc15,#ffd700,#f6e05e);
-  --bg-dark:#0e0e0e;
+--bg:#050505;
+--gold:#facc15;
+--gold-opaque: rgba(250,204,21,0.22); /* ~22% */
+--muted:#9aa0a6;
+--glass: rgba(255,255,255,0.05);
+--card:#0b0b0b;
+--radius:12px;
+--content-max:1100px;
+}
+/* Reset-ish */
+*{box-sizing:border-box}
+html,body{height:100%}
+body{
+margin:0;
+font-family: "Shabnam", "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+background:linear-gradient(180deg,#070707 0%, #0b0b0b 100%);
+color:#e9ecef;
+-webkit-font-smoothing:antialiased;
+-moz-osx-font-smoothing:grayscale;
+line-height:1.45;
+direction:rtl;
 }
 
-/* Navbar */
-nav{
-  position:fixed;top:0;left:0;width:100%;
-  background:rgba(14,14,14,0.7);backdrop-filter:blur(8px);
-  display:flex;justify-content:space-between;align-items:center;
-  padding:15px 50px;z-index:10
+/* HEADER / NAV */
+header{
+position:sticky;
+top:0;
+z-index:60;
+backdrop-filter: blur(6px);
+-webkit-backdrop-filter: blur(6px);
+background: linear-gradient(180deg, rgba(5,5,5,0.66), rgba(5,5,5,0.45));
+border-bottom:1px solid rgba(255,255,255,0.03);
 }
-nav .logo{font-weight:700;font-size:1.5rem;background:var(--gold-gradient);-webkit-background-clip:text;color:transparent}
-nav ul{display:flex;gap:25px;list-style:none}
-nav ul li a{font-weight:500;transition:.3s}
-nav ul li a:hover{color:var(--gold)}
-.lang-btn{border:1px solid var(--gold);background:none;color:var(--gold);padding:5px 12px;border-radius:20px;cursor:pointer}
-
-/* Hero */
-header.hero{
-  position:relative;
-  min-height:100vh;display:flex;align-items:center;padding:0 50px;
-  background:var(--gold-gradient);
+.nav-inner{
+max-width:var(--content-max);
+margin:0 auto;
+display:flex;
+gap:18px;
+align-items:center;
+justify-content:space-between;
+padding:12px 18px;
 }
-header.hero::before{
-  content:"";position:absolute;inset:0;
-  background:var(--bg-dark) url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400'%3E%3Cg fill='%23333' fill-opacity='0.2'%3E%3Ccircle cx='200' cy='200' r='200'/%3E%3C/g%3E%3C/svg%3E") repeat;
-  mix-blend-mode:multiply;
+.brand{
+display:flex;align-items:center;gap:12px;
 }
-.hero-content{position:relative;display:flex;flex-wrap:wrap;align-items:center;gap:50px;width:100%}
-.hero-text{flex:1;min-width:280px}
-.hero-text h1{font-size:2.5rem;margin-bottom:10px}
-.hero-text h1 span{background:var(--gold-gradient);-webkit-background-clip:text;color:transparent}
-.hero-text p{font-size:1.1rem;margin-bottom:20px;color:#ddd}
-.btn{
-  display:inline-block;padding:10px 25px;border-radius:25px;
-  background:var(--gold-gradient);color:#000;font-weight:bold
+.brand h1{
+font-size:16px;margin:0;font-weight:600;color:var(--gold);
+letter-spacing:0.4px;
 }
-.hero-image{flex:1;display:flex;justify-content:center}
-.hero-image img{
-  max-width:320px;border-radius:20px;
-  box-shadow:0 0 40px rgba(250,204,21,0.5);
-  object-fit:cover;mix-blend-mode:screen; /* blend effect */
+.nav-actions{display:flex;gap:10px;align-items:center}
+.lang-toggle, .cv-btn{
+background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--gold);
+padding:8px 12px;border-radius:8px;font-weight:600;cursor:pointer;
+display:inline-flex;align-items:center;gap:8px;text-decoration:none;
 }
+.lang-toggle[aria-pressed="true"]{background:rgba(250,204,21,0.08)}
+.cv-btn svg{transform:translateY(1px)}
 
-/* Sections */
-section{padding:60px 50px}
-.section-title{
-  font-size:1.8rem;margin-bottom:30px;
-  background:var(--gold-gradient);-webkit-background-clip:text;color:transparent
+nav a{color:var(--muted);text-decoration:none;font-size:14px;padding:8px}
+nav a.active{color:var(--gold)}
+
+/* HERO */
+.hero{
+position:relative;
+overflow:hidden;
+padding:46px 20px 80px;
+display:flex;
+align-items:center;
+justify-content:center;
 }
-
-/* Skills */
-.skill{margin-bottom:20px}
-.skill-name{margin-bottom:5px;font-weight:bold}
-.skill-bar{background:#333;border-radius:20px;overflow:hidden;position:relative}
-.skill-bar div{
-  height:12px;background:var(--gold-gradient);
-  width:0;transition:width 1s ease-in-out;
-}
-
-/* Timeline */
-.timeline{border-right:2px solid var(--gold);padding-right:20px;position:relative}
-.timeline-item{margin-bottom:30px;opacity:0;transform:translateY(40px);transition:all .8s ease}
-.timeline-item.show{opacity:1;transform:translateY(0)}
-.timeline-item h3{color:var(--gold);font-size:1.2rem}
-
-/* Contact */
-footer{background:#1a1a1a;color:#888;text-align:center;padding:15px}
-
-/* Scroll Animations */
-.fade-in-up{opacity:0;transform:translateY(40px);transition:all 0.8s ease}
-.fade-in-up.show{opacity:1;transform:translateY(0)}
-
-@media(max-width:768px){
-  .hero-content{flex-direction:column}
-  nav{padding:15px 20px}
-}
-</style>
-</head>
-<body>
-
-<!-- Navbar -->
-<nav>
-  <div class="logo">AminT</div>
-  <ul>
-    <li><a href="#home" data-fa="خانه" data-en="Home">خانه</a></li>
-    <li><a href="#about" data-fa="درباره" data-en="About">درباره</a></li>
-    <li><a href="#skills" data-fa="مهارت‌ها" data-en="Skills">مهارت‌ها</a></li>
-    <li><a href="#experience" data-fa="تجربه" data-en="Experience">تجربه</a></li>
-    <li><a href="#contact" data-fa="تماس" data-en="Contact">تماس</a></li>
-  </ul>
-  <button class="lang-btn" onclick="toggleLang()">EN</button>
-</nav>
-
-<!-- Hero -->
-<header class="hero" id="home">
-  <div class="hero-content">
-    <div class="hero-text fade-in-up">
-      <h1><span>محمدامین طیبی</span></h1>
-      <h2 id="typed-text" style="height:40px"></h2>
-      <p data-fa="مهندس VoIP و زیرساخت شبکه با تجربه در راهکارهای پیشرفته و امنیت شبکه" 
-         data-en="VoIP & Network Engineer with expertise in advanced solutions and network security.">
-         مهندس VoIP و زیرساخت شبکه با تجربه در راهکارهای پیشرفته و امنیت شبکه
-      </p>
-      <a href="pdf_5.pdf" class="btn" download data-fa="دانلود رزومه" data-en="Download CV">دانلود رزومه</a>
-    </div>
-    <div class="hero-image fade-in-up">
-      <img src="image.png" alt="Amin Tayebi">
-    </div>
-  </div>
-</header>
-
-<!-- About -->
-<section id="about" class="fade-in-up">
-  <h2 class="section-title" data-fa="درباره من" data-en="About Me">درباره من</h2>
-  <p data-fa="دارای روحیه تیمی بالا، آشنا با مراتب اداری، یادگیری بالا و تعهد به کار." 
-     data-en="Highly team-oriented, familiar with administrative procedures, committed and quick learner.">
-     دارای روحیه تیمی بالا، آشنا با مراتب اداری، یادگیری بالا و تعهد به کار.
-  </p>
-</section>
-
-<!-- Skills -->
-<section id="skills" class="fade-in-up">
-  <h2 class="section-title" data-fa="مهارت‌ها" data-en="Skills">مهارت‌ها</h2>
-  <div class="skill">
-    <div class="skill-name">Linux LPIC — 80%</div>
-    <div class="skill-bar"><div data-skill="80"></div></div>
-  </div>
-  <div class="skill">
-    <div class="skill-name">VoIP / Asterisk — 85%</div>
-    <div class="skill-bar"><div data-skill="85"></div></div>
-  </div>
-  <div class="skill">
-    <div class="skill-name">Network — 80%</div>
-    <div class="skill-bar"><div data-skill="80"></div></div>
-  </div>
-  <div class="skill">
-    <div class="skill-name">Docker — 60%</div>
-    <div class="skill-bar"><div data-skill="60"></div></div>
-  </div>
-</section>
-
-<!-- Experience -->
-<section id="experience" class="fade-in-up">
-  <h2 class="section-title" data-fa="تجربه کاری" data-en="Work Experience">تجربه کاری</h2>
-  <div class="timeline">
-    <div class="timeline-item">
-      <h3 data-fa="کارشناس 3 — تل سی" data-en="Level 3 Support — TelC">کارشناس 3 — تل سی</h3>
-      <p data-fa="بهمن 1397 تا دی 1400" data-en="Feb 2019 — Jan 2022">بهمن 1397 تا دی 1400</p>
-    </div>
-    <div class="timeline-item">
-      <h3 data-fa="کارشناس فنی پشتیبانی — تل سی" data-en="Technical Support Specialist — TelC">کارشناس فنی پشتیبانی — تل سی</h3>
-      <p data-fa="دی 1400 تا اکنون" data-en="Jan 2022 — Present">دی 1400 تا اکنون</p>
-    </div>
-  </div>
-</section>
-
-<!-- Contact -->
-<section id="contact" class="fade-in-up">
-  <h2 class="section-title" data-fa="تماس" data-en="Contact">تماس</h2>
-  <p>📧 amintayebi**@gmail.com</p>
-  <p>📱 +98-912-337-8752</p>
-  <p>🌍 amintayebi.ir</p>
-</section>
-
-<!-- Footer -->
-<footer>&copy; 2025 Amin Tayebi</footer>
-
-<script>
-// Language Toggle
-let lang='fa';
-function toggleLang(){
-  lang = (lang==='fa')?'en':'fa';
-  document.documentElement.dir = (lang==='fa')?'rtl':'ltr';
-  document.querySelectorAll('[data-fa]').forEach(el=>{
-    el.innerText = el.getAttribute(`data-${lang}`);
-  });
-  document.querySelector('.lang-btn').innerText = (lang==='fa')?'EN':'FA';
+.hero-inner{
+width:100%;
+max-width:var(--content-max);
+display:grid;
+grid-template-columns: 1fr 360px;
+gap:28px;
+align-items:center;
 }
 
-// Typewriter Effect
-let jobTitles = [
-  "کارشناس فنی پشتیبانی",
-  "Network & Communications Specialist",
-  "مهندس VoIP و لینوکس"
-];
-let typedIndex=0, charIndex=0;
-let typedElement = document.getElementById('typed-text');
-function typeJob(){
-  if(charIndex < jobTitles[typedIndex].length){
-    typedElement.innerHTML += jobTitles[typedIndex].charAt(charIndex);
-    charIndex++;
-    setTimeout(typeJob,80);
-  }else{
-    setTimeout(eraseJob,1500);
-  }
+/* Left content */
+.intro{
+padding:20px 22px;
+background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+border-radius:12px;
+box-shadow: 0 6px 30px rgba(0,0,0,0.6);
+position:relative;
 }
-function eraseJob(){
-  if(charIndex > 0){
-    typedElement.innerHTML = jobTitles[typedIndex].substring(0,charIndex-1);
-    charIndex--;
-    setTimeout(eraseJob,40);
-  }else{
-    typedIndex = (typedIndex+1)%jobTitles.length;
-    setTimeout(typeJob,200);
-  }
+.kicker{color:var(--muted);font-size:13px;margin-bottom:6px}
+.name{font-size:34px;font-weight:700;margin:0 0 6px;color:#fff}
+.title{
+font-size:18px;color:var(--gold);
+font-weight:600;min-height:28px;
 }
-typeJob();
+.typewriter{
+display:inline-block;overflow:hidden;white-space:nowrap;border-right:2px solid rgba(255,255,255,0.06);
+animation:blink 1s steps(1) infinite;
+padding-right:6px;
+}
+@keyframes blink{50%{border-color:transparent}}
 
-// Scroll Animations
-const observers = document.querySelectorAll('.fade-in-up, .timeline-item');
-let observer = new IntersectionObserver(entries=>{
-  entries.forEach(entry=>{
-    if(entry.isIntersecting){
-      entry.target.classList.add('show');
-      if(entry.target.querySelectorAll('[data-skill]').length){
-        entry.target.querySelectorAll('[data-skill]').forEach(bar=>{
-          bar.style.width = bar.dataset.skill+'%';
-        });
-      }
-    }
-  });
-},{threshold:0.2});
-observers.forEach(el=>observer.observe(el));
-</script>
+.hero-meta{margin-top:14px;color:var(--muted);font-size:14px}
+.hero-cta{margin-top:20px;display:flex;gap:12px;flex-wrap:wrap}
 
-</body>
-</html>
+/* Right: profile */
+.profile{
+display:flex;align-items:center;justify-content:center;position:relative;
+}
+.profile .photo{
+width:320px;height:320px;border-radius:18px;overflow:hidden;
+background:linear-gradient(180deg,#0a0a0a,#111);
+display:flex;align-items:center;justify-content:center;
+box-shadow: 0 10px 40px rgba(0,0,0,0.6);
+border: 1px solid rgba(250,204,21,0.08);
+position:relative;
+mix-blend-mode:normal;
+}
+.profile img{
+width:100%;height:100%;object-fit:cover;display:block;
+mix-blend-mode:overlay;filter:contrast(1.02) saturate(1.05);
+}
+.photo::after{
+content:"";
+position:absolute;inset:0;
+background: linear-gradient(135deg, transparent 30%, rgba(250,204,21,0.06) 40%, rgba(250,204,21,0.12) 65%, transparent 100%);
+mix-blend-mode:soft-light;pointer-events:none;
+}
+
+/* SVG decorative background in hero (absolute) */
+.hero .bg-svg{
+position:absolute;inset:0;pointer-events:none;z-index:1;
+mix-blend-mode:soft-light;opacity:1;
+}
+/* a faint corner gold gradient ribbon */
+.hero::after{
+content:"";position:absolute;right:-10%;top:-6%;width:420px;height:420px;border-radius:220px;
+background:radial-gradient(closest-side, rgba(250,204,21,0.12), transparent 45%);
+transform:rotate(15deg);filter:blur(30px);opacity:0.9;pointer-events:none;z-index:2;
+}
+
+/* Page sections */
+main{max-width:var(--content-max);margin:28px auto;padding:0 18px;position:relative}
+section{margin-bottom:28px}
+.card{
+background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.02));
+padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.03);
+box-shadow: 0 8px 30px rgba(0,0,0,0.5);
+}
+
+/* Skills bars */
+.skills-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px}
+.skill{
+display:flex;flex-direction:column;gap:8px;font-size:14px;
+}
+.skill .bar{
+background:rgba(255,255,255,0.03);height:12px;border-radius:8px;overflow:hidden;
+}
+.skill .bar > i{
+display:block;height:100%;background:linear-gradient(90deg,var(--gold),#ffd54d);
+width:0%;border-radius:8px;transition:width 900ms cubic-bezier(.2,.9,.3,1);
+}
+
+/* Experience timeline */
+.timeline{display:flex;gap:18px;align-items:flex-start}
+.timeline .left{width:70%}
+.timeline .right{width:30%}
+.timeline-item{display:flex;gap:12px;align-items:flex-start;margin-bottom:16px}
+.timeline-dot{width:36px;height:36px;border-radius:50%;background:var(--gold-opaque);display:flex;align-items:center;justify-content:center;color:#111;font-weight:700;border:1px solid rgba(255,255,255,0.04)}
+
+/* Footer */
+footer{padding:24px 18px;color:var(--muted);text-align:center;font-size:14px}
+
+/* small screens */
+@media (max-width:980px){
+.hero-inner{grid-template
